// Copyright 2019 Northern.tech AS
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        http://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.
import { render } from '@/testUtils';
import { undefineds } from '@northern.tech/testing/mockData';
import { screen } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { vi } from 'vitest';

import { ColumnWidthProvider, SynchronizedTwoColumnData, TwoColumnData } from './TwoColumnData';

describe('TwoColumnData Component', () => {
  it('renders correctly', async () => {
    const { baseElement } = render(<TwoColumnData data={{ uiPasswordRequired: true, foo: 'bar', timezone: 'GMT+2' }} />);
    const view = baseElement.firstChild.firstChild;
    expect(view).toMatchSnapshot();
    expect(view).toEqual(expect.not.stringMatching(undefineds));
  });
  it('renders with chipLikeKey prop', async () => {
    const { baseElement } = render(<TwoColumnData chipLikeKey data={{ attribute: 'value', another: 'item' }} />);
    const view = baseElement.firstChild.firstChild;
    expect(view).toMatchSnapshot();
    expect(screen.getByText('attribute')).toBeInTheDocument();
    expect(screen.getByText('another')).toBeInTheDocument();
  });
  it('allows copying values by clicking content or copy icon', async () => {
    const user = userEvent.setup({ advanceTimers: vi.advanceTimersByTime });
    const setSnackbar = vi.fn();
    render(<TwoColumnData data={{ foo: 'bar' }} setSnackbar={setSnackbar} />);
    await user.click(screen.getByText('bar'));
    expect(setSnackbar).toHaveBeenCalledWith('Value copied to clipboard');
    await user.click(screen.getByLabelText('Copy to clipboard'));
    expect(setSnackbar).toHaveBeenCalledTimes(2);
  });
  it('synchronizes column width across multiple SynchronizedTwoColumnData components', async () => {
    const { container } = render(
      <ColumnWidthProvider>
        <SynchronizedTwoColumnData data={{ short: 'value1' }} />
        <SynchronizedTwoColumnData data={{ muchlongerattribute: 'value2' }} />
      </ColumnWidthProvider>
    );
    const twoColumnElements = container.querySelectorAll('.two-columns');
    expect(twoColumnElements).toHaveLength(2);
  });
});
